Code review to remove all warnings